@@ -11,6 +11,8 @@ General
 * internal OsgiJUnitTest interface has been removed from AbstractOsgiTest hierarchy and methods
 * distributable bundles include Apache 2 license (META-INF/license.txt and META-INF/notice.txt)
 * Maven 2.0.7 is required for properly building the project under JDK 1.6
+* All integration tests have been moved under integration-test/ folder
+* By default, the samples and integration tests are not executed (use Maven profiles to include them)
 
 Package org.springframework.osgi.bundle
 * removed deprecated method BundleFactoryBean#setClassloader
